# autora-template

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test-setuptools-build.yml
docs/: example.ipynb
src/autora/experiment_runner/example_experiment_runner/: __init__.py
src/autora/experiment_runner/experimentation_manager/example_experimentation_manager/: __init__.py
src/autora/experiment_runner/recruitment_manager/example_recruitment_manager/: __init__.py
src/autora/experimentalist/example_experimentalist/: __init__.py
src/autora/experimentalist/pooler/example_pooler/: __init__.py
src/autora/experimentalist/sampler/example_sampler/: __init__.py
src/autora/synthetic/: __init__.py
src/autora/synthetic/data/: expected_value.py  prospect_theory.py  weber_fechner.py
src/autora/theorist/example/: __init__.py
tests/: test_experimentalist_pooler_example.py  test_experimentalist_sampler_example.py
