[project]
name = "autora-theorist-template"
version = "0.0.0"
description = "AutoRA Theorist Template"
authors = []
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8.10,<3.11"


dependencies = [
"autora-core",
    "scikit-learn",
]


[project.optional-dependencies]
dev = [
    "jupyter",
    "ipython",
    "ipywidgets",
    "flake8",
    "pytest",
    "pre-commit",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocstrings-python",
    "mkdocs-jupyter",
]

[project.urls]
homepage = "https://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-theorist-template"
documentation = "https://autoresearch.github.io/autora/"


#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

#[tool.isort]
#profile = "black"
